--- a/templates/config-wb-m1w2_v3-multiple_w1.json.jinja
+++ b/templates/config-wb-m1w2_v3-multiple_w1.json.jinja
@@ -558,7 +558,7 @@
                 "temperature_readings_filter_deg_description": "If the new value equals 85 °C, it is discarded if it differs from the previous one by more than the filter value. Write 0 to disable the filter. The default value is 1",
                 "temperature_readings_period_s_title": "Temperature sensors poll period (s)",
                 "temperature_readings_period_s_description": "When changing this parameter, you should also change the erroneous values filter coefficient. The default value is 2",
-                "w1_sensors_description": "If the sensor is not used, specify '0'.<br><br>When adding new sensors, do not forget to read the parameters from the device (the 'Reread paramaters' button) and then save it (the 'Save config' button).<br>Otherwise, when connecting to the device, the previously saved parameters will be loaded.",
+                "w1_sensors_description": "Adding new sensors:<br>1) Make sure that the new sensors are connected to the bus;<br>2) Click the 'Save New Sensors On The Bus' button on the device widget;<br>3) Click the 'Review config' button;<br>4) Click the 'Save config' button.<br>New sensors will be saved in free cells.<br><br>If the sensor is not used, specify '0'.",
 
                 "WB-M1W2_v3_template_title": "WB-M1W2 v.3 fw4.35 (2-channel temperature measurement and pulse-counter module)",
                 "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600",
@@ -593,7 +593,7 @@
                 "temperature_readings_filter_deg_description": "Если значение температуры равно 85 °C, то оно отбрасывается, если оно отличается от предыдущего больше, чем на значение фильтра. Запишите 0, чтобы отключить фильтр. Значение по умолчанию - 1",
                 "temperature_readings_period_s_title": "Период опроса датчиков температуры (с)",
                 "temperature_readings_period_s_description": "При изменении данного параметра, следует также изменить коэффициент фильтра ошибочных значений. Значение по умолчанию - 2",
-                "w1_sensors_description": "Если датчик не используется, укажите '0'.<br><br>При добавлении новых датчиков не забудьте считать настройки из устройства (кнопка 'Перечитать настройки'), а затем сохранить их (кнопка 'Сохранить настройки').<br>В противном случае при подключении к устройству будут загружены ранее сохраненные параметры.",
+                "w1_sensors_description": "Добавление новых датчиков:<br>1) убедитесь, что новые датчики подключены на шину;<br>2) нажмите кнопку 'Сохранить новые датчики на шине' на виджете устройства;<br>3) нажмите кнопку 'Перечитать настройки';<br>4) нажмите кнопку 'Сохранить настройки'.<br>Новые датчики будут сохранены в свободные ячейки.<br><br>Если датчик не используется, укажите '0'.",
                 "Status LED": "Индикатор состояния",
                 "Enabled": "Активен",
                 "Disabled": "Отключен",
